--- a/bai7.html
+++ b/bai7.html
@@ -18,6 +18,7 @@
         }
     </style>
     <title>iFrameDemo</title>
+    <a href="https://github.com/j1mmyhvstle/Web_HW.git">Github : Nguyen Phung Chau (31221024746)</a>
 </head>
 
 <body>
