--- a/bai8.html
+++ b/bai8.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>tableDemo</title>
+    <a href="https://github.com/j1mmyhvstle/Web_HW.git">Github : Nguyen Phung Chau (31221024746)</a>
     <style>
         table {
             border-collapse: collapse;
             width: 75%;
-            border: 1px solid rgb(0, 0, 0); /*Khung viền*/
+            border: 2px solid rgb(0, 0, 0); /*Khung viền*/
             margin-left: auto;
             margin-right: auto;
             margin-top: auto;
             margin-bottom: auto;
         }
         th, td {
-            border: 1px solid black;
+            border: 2px solid black;
             padding: 15px;
             text-align: center;
         }
