--- a/bai9.html
+++ b/bai9.html
@@ -24,7 +24,8 @@
             height: auto;
         }
     </style>
-    <title>Document</title>
+    <title>Horizontal</title>
+    <a href="https://github.com/j1mmyhvstle/Web_HW.git">Github : Nguyen Phung Chau (31221024746)</a>
 </head>
 <div id="top">
     <h1>
