--- a/bai12.html
+++ b/bai12.html
@@ -69,7 +69,7 @@
         </select>
         <br><br>
 
-        <label for="email">Email:</label>
+        <label for="email" >Email:</label>
         <input type="email" id="email" name="email" autofocus><br><br>
 
         <label for="website">Website:</label>
@@ -82,7 +82,7 @@
         <label for="female">Nữ</label><br><br>
 
         <label for="birthdate">Ngày sinh:</label>
-        <input type="date" id="birthdate" name="birthdate" min="2023-01-01"><br><br>
+        <input type="date" id="birthdate" name="birthdate" min="01-01-2023" pattern="\d{2}/\d{2}/\d{4}" placeholder="dd/mm/yyyy"><br><br>
 
         <label for="score">Điểm:</label>
         <input type="number" id="score" name="score" min="0" max="10" step="0.5"><br><br>
