--- a/bai5.html
+++ b/bai5.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Danh sách chương trình học</title>
+  <a href="https://github.com/j1mmyhvstle/Web_HW.git">Github : Nguyen Phung Chau (31221024746)</a>
   <style>
     body {
       font-family: 'Times New Roman', Times, serif;
