--- a/bai6.html
+++ b/bai6.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai Tap 04</title>
+    <a href="https://github.com/j1mmyhvstle/Web_HW.git">Github : Nguyen Phung Chau (31221024746)</a>
 </head>
 <body>
     <div class="top-content">
